# audible-cli-hypermodern-test

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  .sshignore  CHANGELOG.md  CONTRIBUTING.md  README.md  audible-dirmode.spec  audible-filemode.spec  noxfile.py  pyproject.toml
.github/: labels.yml  release-drafter.yml
.github/workflows/: add-assets-workflow-call.yml  add-release-assets.yml  constraints.txt  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  usage.md
plugin_cmds/: cmd_decrypt.py  cmd_get-annotations.py  cmd_goodreads-transform.py  cmd_image-urls.py  cmd_listening-stats.py  cmd_remove-encryption.py  convert_oa_cred.py
src/audible_cli/: __init__.py  __main__.py  _logging.py  cli.py  config.py  constants.py  decorators.py  exceptions.py  models.py  plugins.py  utils.py
src/audible_cli/cmds/: __init__.py  cmd_activation_bytes.py  cmd_api.py  cmd_download.py  cmd_library.py  cmd_manage.py  cmd_quickstart.py  cmd_wishlist.py
tests/: __init__.py  test_cli.py  test_main.py
utils/: update_chapter_titles.py
